some more commit

--- a/Superiority.html
+++ b/Superiority.html
@@ -136,7 +136,7 @@
             box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.8); /* Efek bayangan */
         }
 
-        .top-left-image {
+        .top-left-image { /* Logo PKM */
             position: absolute;
             top: -350px;
             left: 20px;
