--- a/superiority.html
+++ b/superiority.html
@@ -154,6 +154,7 @@
             <a href="about.html">About Product</a>
             <a href="superiority.html">Superiority</a>
             <a href="results.html">Results</a>
+            <a href="referensi.html">Referensi</a>
         </nav>
     </header>
     <section>
