--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
         nav a {
             text-decoration: none;
             margin: 0 10px;
-            background-color: #ffffff; /* Warna latar belakang tombol */
             color: rgb(0, 0, 0); /* Warna teks tombol */
             padding: 15px 20px; /* Padding tombol */
             border-radius: 7px; /* Sudut melengkung pada tombol */
             transition: background-color 0.3s, transform 0.3s; /* Efek transisi latar belakang dan transformasi saat tombol dihover */
+            font-weight: bold;
         }
 
         nav a:hover {
             background-color: #00ffe5; /* Warna latar belakang saat tombol dihover */
-            transform: scale(1.1); /* Efek memperbesar tombol saat dihover */
+            transform: scale(1.2); /* Efek memperbesar tombol saat dihover */
         }
 
         nav a:active {
-            transform: scale(0.9); /* Efek mengerutkan tombol saat ditekan */
+            transform: scale(0.8); /* Efek mengerutkan tombol saat ditekan */
         }
 
         /* Efek menggeser ke bawah saat "About Product" ditekan */
@@ -134,6 +134,7 @@
         <a href="superiority.html">Superiority</a>
         <a href="results.html">Results</a>
         <a href="referensi.html">Referensi</a>
+        <a href="spotify.html" >Spotify</a>
     </nav>
 </body>
 </html>
