--- a/referensi.html
+++ b/referensi.html
@@ -49,11 +49,11 @@
         nav a {
             text-decoration: none;
             margin: 0 10px;
-            background-color: #ffffff; /* Warna latar belakang tombol */
             color: rgb(0, 0, 0); /* Warna teks tombol */
             padding: 15px 20px; /* Padding tombol */
             border-radius: 7px; /* Sudut melengkung pada tombol */
             transition: background-color 0.3s, transform 0.3s; /* Efek transisi latar belakang dan transformasi saat tombol dihover */
+            font-weight: bold;
         }
 
         nav a:hover {
@@ -139,6 +139,7 @@
             <a href="superiority.html">Superiority</a>
             <a href="results.html">Results</a>
             <a href="referensi.html">Referensi</a>
+            <a href="spotify.html" >Spotify</a>
         </nav>
     </header>
     <section>
