--- a/superiority.html
+++ b/superiority.html
@@ -49,15 +49,15 @@
         nav a {
             text-decoration: none;
             margin: 0 10px;
-            background-color: #ffffff; /* Warna latar belakang tombol */
             color: rgb(0, 0, 0); /* Warna teks tombol */
             padding: 15px 20px; /* Padding tombol */
             border-radius: 7px; /* Sudut melengkung pada tombol */
             transition: background-color 0.3s, transform 0.3s; /* Efek transisi latar belakang dan transformasi saat tombol dihover */
+            font-weight: bold;
         }
 
         nav a:hover {
-            background-color: #ffd500; /* Warna latar belakang saat tombol dihover */
+            background-color: #ffffff; /* Warna latar belakang saat tombol dihover */
             transform: scale(1.1); /* Efek memperbesar tombol saat dihover */
         }
 
@@ -104,7 +104,7 @@
 
         .right-align-text {
             flex: 1;
-            text-align: justify;
+            text-align: left;
             padding: 0 150px;
         }
 
@@ -112,6 +112,7 @@
         .right-align-text h2 {
             font-size: 36px; /* Besar font untuk judul */
             background-color: #ffffff; /* Warna latar belakang */
+            color: rgb(31, 86, 146); /* Warna teks tombol */
             padding: 20px; /* Padding untuk memberikan jarak dengan tepi kotak */
             border-radius: 7px; /* Sudut melengkung pada kotak */
             display: inline-block; /* Membuat kotak sesuai dengan teks */
@@ -120,6 +121,7 @@
 
         .right-align-text h3 {
             font-size: 36px;
+            color: rgb(31, 86, 146); /* Warna teks tombol */
             background-color: #ffffff; /* Warna latar belakang */
             padding: 20px; /* Padding untuk memberikan jarak dengan tepi kotak */
             border-radius: 7px; /* Sudut melengkung pada kotak */
@@ -129,6 +131,7 @@
 
         .right-align-text h4 {
             font-size: 36px;
+            color: rgb(31, 86, 146); /* Warna teks tombol */
             background-color: #ffffff; /* Warna latar belakang */
             padding: 20px; /* Padding untuk memberikan jarak dengan tepi kotak */
             border-radius: 7px; /* Sudut melengkung pada kotak */
@@ -155,6 +158,7 @@
             <a href="superiority.html">Superiority</a>
             <a href="results.html">Results</a>
             <a href="referensi.html">Referensi</a>
+            <a href="spotify.html" >Spotify</a>
         </nav>
     </header>
     <section>
@@ -162,9 +166,10 @@
         <img src="mas2_baju_kuning.jpg" alt="FOCO Palette Image" class="left-image">
         <img src="Logo_PKM.jpg" alt="Top Left Image" class="top-left-image">    
         <div class="right-align-text">
-            <h2>Cat lukis pereda stres dan media pengenalan hutan</h2>
-            <h3>Mendukung kesahjahteraan UMKM</h3>
-            <h4>Mengurangi pencemaran lingkungan akibat pewarna sintetis</h4>
+            <h2>Cat air dengan bahan alam pertama di Indonesia yang Edukatif</h2>
+            <h3>Terintregasi dengan Website yangberisi edukasi tentang keaneka-
+                ragaman tumbuhan dan mental health</h3>
+            <h4>Menggunakan ekstraksi tumbuhan untuk mendapatkan zat warna alami</h4>
         </div>
     </section>
 </body>
