some more commit

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ABOUT PRODUCT</title>
+    <title>About Product | Foco Palette</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <style>
