--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Website</title>
+    <title>Home Page | Foco Palette</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
         /* Gaya CSS untuk body (tata letak halaman) */
