--- a/spotify.html
+++ b/spotify.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FOCO di Spotify</title>
+    <title>Spotify | Foco Palette</title>
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to the external CSS file -->
     <style>
         @font-face {
