--- a/referensi.html
+++ b/referensi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About Product | Your Website</title>
+    <title>Referensi | Foco Palette</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <style>
