--- a/superiority.html
+++ b/superiority.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About Product | Your Website</title>
+    <title>Superiority | Foco Palette</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <style>
