--- a/about.html
+++ b/about.html
@@ -208,6 +208,8 @@
             <a href="results.html">Results</a>
             <a href="referensi.html">Referensi</a>
             <a href="spotify.html">Spotify</a>
+            <a href="warna_alami.html">Warna Alami</a>
+
         </nav>
         <img src="Logo_PKM.jpg" alt="Top Left Image" class="top-left-image">
     </header>
