--- a/results.html
+++ b/results.html
@@ -169,7 +169,8 @@
         <a href="superiority.html">Superiority</a>
         <a href="results.html">Results</a>
         <a href="referensi.html">Referensi</a>
-        <a href="spotify.html" >Spotify</a>
+        <a href="spotify.html">Spotify</a>
+        <a href="warna_alami.html">Warna Alami</a>
     </nav>
 
 </body>
