--- a/superiority.html
+++ b/superiority.html
@@ -163,7 +163,8 @@
             <a href="superiority.html">Superiority</a>
             <a href="results.html">Results</a>
             <a href="referensi.html">Referensi</a>
-            <a href="spotify.html" >Spotify</a>
+            <a href="spotify.html">Spotify</a>
+            <a href="warna_alami.html">Warna Alami</a>
         </nav>
         <img src="Logo_PKM.jpg" alt="Top Left Image" class="top-left-image">
     </header>
